--- a/Clipping polygons/Lab1/Lab1.csproj
+++ b/Clipping polygons/Lab1/Lab1.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BuildPolygon.cs" />
+    <Compile Include="IntersectionPoints.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
