--- a/Clipping polygons/Lab1/Lab1.csproj
+++ b/Clipping polygons/Lab1/Lab1.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Animation.cs" />
     <Compile Include="BuildPolygon.cs" />
     <Compile Include="IntersectionPoints.cs" />
     <Compile Include="MainForm.cs">
