Clipping polygons. Some structure changes in AnimationData class and Main class. Some preparation for affine transformations.

--- a/Clipping polygons/Lab1/Lab1.csproj
+++ b/Clipping polygons/Lab1/Lab1.csproj
@@ -57,7 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Animation.cs" />
+    <Compile Include="AnimationData.cs" />
     <Compile Include="BuildPolygon.cs" />
     <Compile Include="IntersectionPoints.cs" />
     <Compile Include="MainForm.cs">
